--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+        <header>
+            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title"/>
+        </header>
+        <section class="intro">
+            <div class="row">
+                <div class="col">
+                    <img src="/images/logo_me_walk.jpg" alt="logo walking" class="logo-walking"/>
+                </div>
+                <div class="col">
+                    <h2>
+                        <strong>
+                            These are my shoes for you to borrow. Try them on, feel my
+                            feelings, think my thoughts, say my words.
+                            <br />
+                            <h1>Walk my shoes.</h1>
+                        </strong>
+                    </h2>
+                </div>
+            </div>
+        </section>
+  </body>
 </html>
