added navigation menu and contact page

--- a/essays/essays.html
+++ b/essays/essays.html
@@ -12,8 +12,9 @@
     />
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
+
   <body>
-    <h1>Becoming</h1>
+    <h1>Essays</h1>
     <section class="navigation-menu">
       <a href="/index.html">Home</a>
       <a href="/about.html">About</a>
