--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
                 </div>
             </div>
         </section>
+        <section class="navigation-menu">
+            <a href="/index.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/essays/essays.html">Essays</a>
+            <a href="/poems/poems.html">Poems</a>
+            <a href="/contact.html">Contact</a>
+        </section>
   </body>
 </html>
