--- a/poems/poems.html
+++ b/poems/poems.html
@@ -12,5 +12,14 @@
     />
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Poems</h1>
+    <section class="navigation-menu">
+      <a href="/index.html">Home</a>
+      <a href="/about.html">About</a>
+      <a href="/essays/essays.html">Essays</a>
+      <a href="/poems/poems.html">Poems</a>
+      <a href="/contact.html">Contact</a>
+    </section>
+  </body>
 </html>
