--- a/about.html
+++ b/about.html
@@ -13,13 +13,43 @@
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <h1>About Walk My Shoes</h1>
-    <section class="navigation-menu">
-      <a href="/index.html">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/essays/essays.html">Essays</a>
-      <a href="/poems/poems.html">Poems</a>
-      <a href="/contact.html">Contact</a>
-    </section>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html">Walk My shoes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/essays/essays.html">Essays</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/poems/poems.html">Poems</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1 class="mt-5">About Walk My Shoes</h1>
   </body>
 </html>
