--- a/index.html
+++ b/index.html
@@ -13,8 +13,36 @@
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/index.html">Walk My shoes</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/essays/essays.html">Essays</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/poems/poems.html">Poems</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
-        <header>
+        <header class="mt-5">
             <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title"/>
         </header>
         <section class="intro">
@@ -34,12 +62,6 @@
                 </div>
             </div>
         </section>
-        <section class="navigation-menu">
-            <a href="/index.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/essays/essays.html">Essays</a>
-            <a href="/poems/poems.html">Poems</a>
-            <a href="/contact.html">Contact</a>
-        </section>
+        
   </body>
 </html>
