added footer to all pages and logo to navbar

--- a/essays/essays.html
+++ b/essays/essays.html
@@ -15,8 +15,10 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="/index.html">Walk My shoes</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html"
+          ><img src="/images/logo_square.jpg" class="logo-navbar"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,5 +54,8 @@
       </div>
     </nav>
     <h1 class="mt-5">Essays</h1>
+    <footer>
+      <p>Coded and designed by: Irene Ortega</p>
+    </footer>
   </body>
 </html>
