--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/index.html">Walk My shoes</a>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html" ><img src="/images/logo_square.jpg" class="logo-navbar"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,14 +43,14 @@
     </nav>
     <div class="container">
         <header class="mt-5">
-            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title"/>
+            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title img-fluid"/>
         </header>
         <section class="intro">
             <div class="row">
-                <div class="col">
-                    <img src="/images/logo_me_walk.jpg" alt="logo walking" class="logo-walking"/>
+                <div class="col-md-6">
+                    <img src="/images/logo_me_walk.jpg" alt="logo walking" class="logo-walking img-fluid"/>
                 </div>
-                <div class="col">
+                <div class="col-md-6 intro-text">
                     <h2>
                         <strong>
                             These are my shoes for you to borrow. Try them on, feel my
@@ -62,6 +62,8 @@
                 </div>
             </div>
         </section>
-        
+    <footer>
+        <p>Coded and designed by: Irene Ortega</p>
+    </footer>    
   </body>
 </html>
