--- a/poems/poems.html
+++ b/poems/poems.html
@@ -14,8 +14,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="/index.html">Walk My shoes</a>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html"
+          ><img src="/images/logo_square.jpg" class="logo-navbar"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,5 +53,8 @@
       </div>
     </nav>
     <h1 class="mt-5">Poems</h1>
+    <footer>
+      <p>Coded and designed by: Irene Ortega</p>
+    </footer>
   </body>
 </html>
