blog page and contact section added
IG and email icons added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
@@ -35,7 +37,10 @@
                         <a class="nav-link" href="/poems/poems.html">Poems</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="blog/blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -59,6 +64,25 @@
                             <h1>Walk my shoes.</h1>
                         </strong>
                     </h2>
+                </div>
+            </div>
+        </section>
+        <section class="contact" id="contact">
+            <h2>Contact</h2>
+            <div class="row">
+                <div class="col">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </div>
+                <div class="col">
+                    <i class="far fa-envelope fa-2x"></i>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    @walkmyshoes.words
+                </div>
+                <div class="col">
+                   walkmyshoes.words@gmail.com
                 </div>
             </div>
         </section>
