--- a/poems/poems.html
+++ b/poems/poems.html
@@ -46,7 +46,10 @@
               <a class="nav-link active" href="/poems/poems.html">Poems</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="/blog/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
