--- a/index.html
+++ b/index.html
@@ -69,20 +69,22 @@
         </section>
         <section class="contact" id="contact">
             <h2>Contact</h2>
-            <div class="row">
-                <div class="col">
-                    <i class="fab fa-instagram fa-2x"></i>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <i class="fab fa-instagram fa-2x"></i>
+                    </div>
+                    <div class="col">
+                        <i class="far fa-envelope fa-2x"></i>
+                    </div>
                 </div>
-                <div class="col">
-                    <i class="far fa-envelope fa-2x"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    @walkmyshoes.words
-                </div>
-                <div class="col">
-                   walkmyshoes.words@gmail.com
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank">@walkmyshoes.words</a>
+                    </div>
+                    <div class="col">
+                        <a href="mailto:walkmyshoes.words@gmail.com">walkmyshoes.words@gmail.com</a>
+                    </div>
                 </div>
             </div>
         </section>
