--- a/index.html
+++ b/index.html
@@ -72,18 +72,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <i class="fab fa-instagram fa-2x"></i>
+                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
+                            class="text-rigt contact-links"><i class="fab fa-instagram fa-2x"></i></a>
                     </div>
                     <div class="col">
-                        <i class="far fa-envelope fa-2x"></i>
+                        <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank">@walkmyshoes.words</a>
+                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links">@walkmyshoes.words</a>
                     </div>
                     <div class="col">
-                        <a href="mailto:walkmyshoes.words@gmail.com">walkmyshoes.words@gmail.com</a>
+                        <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>
                     </div>
                 </div>
             </div>
