--- a/index.html
+++ b/index.html
@@ -68,26 +68,14 @@
             </div>
         </section>
         <section class="contact" id="contact">
-            <h2>Contact</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
-                            class="text-rigt contact-links"><i class="fab fa-instagram fa-2x"></i></a>
-                    </div>
-                    <div class="col">
-                        <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links">@walkmyshoes.words</a>
-                    </div>
-                    <div class="col">
-                        <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>
-                    </div>
-                </div>
-            </div>
+            <h2><strong>Contact</strong></h2>
+            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
+                        class="text-rigt contact-links">@walkmyshoes.words</a>
+                        <br/>
+                        
+            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
+            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>          
         </section>
     <footer>
         <p>Coded and designed by: Irene Ortega</p>
