testing essay entries on essay page and added two essay pages
essay pages added: becoming and disappearing

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="/index.html"
           ><img src="/images/logo_square.jpg" class="logo-navbar"
         /></a>
@@ -56,6 +56,35 @@
       </div>
     </nav>
     <h1 class="mt-5">About Walk My Shoes</h1>
+    <section class="content-area">
+      <p>
+        <em
+          >“It’s awful and terrible and it sucks. It hurts so bad. It’s like
+          you’ve been purposefully frozen forever and now you’re slowly
+          defrosting, and everything, everything hurts. (...) It’s like having
+          an exposed nerve.” -Glennon Doyle</em
+        >
+        <br />
+        <br />
+        These were Glennon Doyle’s words talking about her early sobriety, and I
+        thought “this is exactly how I’ve been feeling”. Except I barely drink,
+        I don’t do drugs, or gamble. My addiction, my escape, what kept me numb,
+        I realised, was a chronic case of people pleasing. The strong believe
+        that I needed to be liked and fit in. Be accommodating. That everyone
+        else mattered but me. She continues saying that she hasn’t been “fine”
+        since she stopped drinking, because she was finally living. Being alive
+        means feeling, the good and the bad. For me, it was as if I had been
+        just floating through life for years but never really living. How do you
+        go on for so long without actually living? And so you never become
+        anyone. You just exist and make decisions based on existing, to keep
+        existing. And it’s not happy, it’s not fulfilling, but you don’t know,
+        because that is your reality. It has always been. And when you finally
+        wake up and see and feel for the first time, it’s so overwhelming, and
+        you don’t know what to do with all that. You need to process and
+        uncover, discover and for the first time choose. Choose for the person
+        you are meant to be. This is where this space was born.
+      </p>
+    </section>
     <footer>
       <p>Coded and designed by: Irene Ortega</p>
     </footer>
