--- a/essays/disappearing.html
+++ b/essays/disappearing.html
@@ -58,7 +58,7 @@
     </nav>
     <h1 class="mt-5"><a href="/essays/essays.html">Essays</a></h1>
     <section class="content-area">
-      <h2>Becoming</h2>
+      <h2>Disappearing</h2>
       <p>
         -Why are you so quiet? -Are you okay? Shyness can mean feeling
         uncomfortable, self-conscious, nervous, bashful, timid, or insecure.
