--- a/essays/essays.html
+++ b/essays/essays.html
@@ -57,6 +57,76 @@
       </div>
     </nav>
     <h1 class="mt-5">Essays</h1>
+    <section class="content-area">
+      <div class="container">
+        <div class="row essay-entry">
+          <div class="col">
+            
+              <h2><a href="/essays/disappearing.html" target="_blank">Disappearing</a></h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+          <div class="col">
+            <a href="/essays/becoming.html" target="_blank"></a>
+            <h2>Becoming</h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+        </div>
+        <div class="row essay-entry">
+          <div class="col">
+            <a href="/essays/disappearing.html" target="_blank"></a>
+            <h2>Dr. Ortega's Daughter</h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+          <div class="col">
+            <a href="/essays/becoming.html" target="_blank"></a>
+            <h2>Some water in between</h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+        </div>
+        <div class="row essay-entry">
+          <div class="col">
+        
+            <h2><a href="/essays/disappearing.html" target="_blank">The undertow of sadness</a></h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+          <div class="col">
+            <a href="/essays/becoming.html" target="_blank"></a>
+            <h2>Bla bla bla</h2>
+            </a>
+            <p>
+              I quieted my voice until I had none. I muted myself. But quiet is
+              invisible, and that's how I disappeared.
+              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <p>Coded and designed by: Irene Ortega</p>
     </footer>
