--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="/index.html" ><img src="/images/logo_square.jpg" class="logo-navbar"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
             <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
                         class="text-rigt contact-links">@walkmyshoes.words</a>
                         <br/>
-                        
+
             <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
             <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>          
         </section>
