--- a/essays/essays.html
+++ b/essays/essays.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Essays - Walk My Shoes</title>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -14,7 +18,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html"
           ><img src="/images/logo_square.jpg" class="logo-navbar"
@@ -62,44 +66,43 @@
         <div class="row essay-entry">
           <div class="col">
             
-              <h2><a href="/essays/disappearing.html" target="_blank">Disappearing</a></h2>
+              <h2><a href="/essays/disappearing.html">Disappearing</a></h2>
             </a>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
           <div class="col">
-            <a href="/essays/becoming.html" target="_blank"></a>
-            <h2>Becoming</h2>
+            <h2><a href="/essays/becoming.html">Becoming</a></h2>
             </a>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a href="/essays/becoming.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
         </div>
         <div class="row essay-entry">
           <div class="col">
-            <a href="/essays/disappearing.html" target="_blank"></a>
+            <a href="/essays/disappearing.html"></a>
             <h2>Dr. Ortega's Daughter</h2>
             </a>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
           <div class="col">
-            <a href="/essays/becoming.html" target="_blank"></a>
+            <a href="/essays/becoming.html"></a>
             <h2>Some water in between</h2>
             </a>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a href="/essays/becoming.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
         </div>
@@ -116,7 +119,7 @@
           </div>
           <div class="col">
             <a href="/essays/becoming.html" target="_blank"></a>
-            <h2>Bla bla bla</h2>
+            <h2>Bla bla</h2>
             </a>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
