added instagram feed widget to Poems page

--- a/poems/poems.html
+++ b/poems/poems.html
@@ -66,6 +66,10 @@
       </div>
     </nav>
     <h1 class="mt-5">Poems</h1>
+    <section class="content-area">
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-032824d9-fceb-4aa1-895f-22c5e2e6f524"></div>
+    </section>
     <footer>
       <p>Coded and designed by: Irene Ortega</p>
     </footer>
