improved some SEO

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         </header>
         <section class="intro">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <img src="/images/logo_me_walk.jpg" alt="logo walking" class="logo-walking img-fluid"/>
                 </div>
-                <div class="col-md-6 intro-text">
+                <div class="col-lg-6 intro-text">
                     <h2>
                         <strong>
                             These are my shoes for you to borrow. Try them on, feel my
                             feelings, think my thoughts, say my words.
                             <br />
-                            <h1>Walk my shoes.</h1>
+                            <h1 class="walk-my-shoes-title">Walk my shoes.</h1>
                         </strong>
                     </h2>
                 </div>
