--- a/essays/essays.html
+++ b/essays/essays.html
@@ -64,7 +64,7 @@
     <section class="content-area">
       <div class="container">
         <div class="row essay-entry">
-          <div class="col">
+          <div class="col-md-6">
             
               <h2><a href="/essays/disappearing.html">Disappearing</a></h2>
             </a>
@@ -74,7 +74,7 @@
               <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <h2><a href="/essays/becoming.html">Becoming</a></h2>
             </a>
             <p>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="row essay-entry">
-          <div class="col">
+          <div class="col-md-6">
             <a href="/essays/disappearing.html"></a>
             <h2>Dr. Ortega's Daughter</h2>
             </a>
@@ -95,7 +95,7 @@
               <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
             </p>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <a href="/essays/becoming.html"></a>
             <h2>Some water in between</h2>
             </a>
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="row essay-entry">
-          <div class="col">
+          <div class="col-md-6">
         
             <h2><a href="/essays/disappearing.html" target="_blank">The undertow of sadness</a></h2>
             </a>
@@ -117,7 +117,7 @@
               <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
             </p>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <a href="/essays/becoming.html" target="_blank"></a>
             <h2>Bla bla</h2>
             </a>
