--- a/essays/essays.html
+++ b/essays/essays.html
@@ -129,6 +129,27 @@
           </div>
         </div>
       </div>
+      <div class="other-pages">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-center mt-5">
+            <li class="page-item disabled">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item active">
+              <a class="page-link" href="/blog/blog.html">1</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </section>
     <footer>
       <p>Coded and designed by: Irene Ortega</p>
