edited About text content

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
           >“It’s awful and terrible and it sucks. It hurts so bad. It’s like
           you’ve been purposefully frozen forever and now you’re slowly
           defrosting, and everything, everything hurts. (...) It’s like having
-          an exposed nerve.” -Glennon Doyle</em
+          an exposed nerve.”</em
         >
         <br />
         <br />
@@ -81,7 +81,7 @@
         I don’t do drugs, or gamble. My addiction, my escape, what kept me numb,
         I realised, was a chronic case of people pleasing. The strong believe
         that I needed to be liked and fit in. Be accommodating. That everyone
-        else mattered but me. She continues saying that she hasn’t been “fine”
+        else mattered but me. In the same interview, she continues saying that she hasn’t been “fine”
         since she stopped drinking, because she was finally living. Being alive
         means feeling, the good and the bad. For me, it was as if I had been
         just floating through life for years but never really living. How do you
@@ -92,7 +92,29 @@
         wake up and see and feel for the first time, it’s so overwhelming, and
         you don’t know what to do with all that. You need to process and
         uncover, discover and for the first time choose. Choose for the person
-        you are meant to be. This is where this space was born.
+        you are meant to be. 
+        <br />
+        <strong>This is where this space was born.</strong>
+        <hr/>
+        What you'll find here are all my own words, thoughts and feelings. It's
+        raw, personal, vulnerable and absolutely terrifying to share, but I have chosen to do it. To unburden myself of years of carrying the weight of my
+        emotions, but also with the hope that some of it will resonate
+        with others and encourage deeper connections. Because if I have learned
+        something in the past years of my own search is that some emotions,
+        situations, responses are universal; That we all have our own world of
+        trauma and drama and pain and joy and we are all looking for a way to
+        make it work.
+        <br />
+        <br />
+        Most of the essays are still draft versions (if I aimed for perfection I
+        would never share) and the blog posts are written on the spot or edited
+        versions of notes I keep on my phone.
+        <br />
+        <br />
+        I feel uncomfortable calling myself a writer, but I write, because I do
+        believe I have something to say and a message that can find common
+        ground in other people. I'm still finding my voice but I want you to be
+        part of it. The words and the process.
       </p>
     </section>
     <footer>
