--- a/essays/essays.html
+++ b/essays/essays.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Essays - Walk My Shoes</title>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -65,22 +71,25 @@
       <div class="container">
         <div class="row essay-entry">
           <div class="col-md-6">
-            
-              <h2><a href="/essays/disappearing.html">Disappearing</a></h2>
-            </a>
+            <h2><a href="/essays/disappearing.html">Disappearing</a></h2>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
+              <a href="/essays/disappearing.html" class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
           <div class="col-md-6">
             <h2><a href="/essays/becoming.html">Becoming</a></h2>
-            </a>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" class="read-more-link">[Read more]</a>
+              <a href="/essays/becoming.html" class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
         </div>
@@ -88,43 +97,60 @@
           <div class="col-md-6">
             <a href="/essays/disappearing.html"></a>
             <h2>Dr. Ortega's Daughter</h2>
-            </a>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" class="read-more-link">[Read more]</a>
+              <a href="/essays/disappearing.html" class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
           <div class="col-md-6">
             <a href="/essays/becoming.html"></a>
             <h2>Some water in between</h2>
-            </a>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" class="read-more-link">[Read more]</a>
+              <a href="/essays/becoming.html" class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
         </div>
         <div class="row essay-entry">
           <div class="col-md-6">
-        
-            <h2><a href="/essays/disappearing.html" target="_blank">The undertow of sadness</a></h2>
-            </a>
+            <h2>
+              <a href="/essays/disappearing.html" target="_blank"
+                >The undertow of sadness</a
+              >
+            </h2>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a
+                href="/essays/disappearing.html"
+                target="_blank"
+                class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
           <div class="col-md-6">
             <a href="/essays/becoming.html" target="_blank"></a>
-            <h2>Bla bla</h2>
-            </a>
+            <h2>Bla bla bla bla bla</h2>
+            <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" target="_blank" class="read-more-link">[Read more]</a>
+              <a
+                href="/essays/becoming.html"
+                target="_blank"
+                class="read-more-link"
+                >[Read more]</a
+              >
             </p>
           </div>
         </div>
