--- a/essays/essays.html
+++ b/essays/essays.html
@@ -122,18 +122,15 @@
         <div class="row essay-entry">
           <div class="col-md-6">
             <h2>
-              <a href="/essays/disappearing.html" target="_blank"
-                >The undertow of sadness</a
+              <a href="/essays/undertow-sadness.html"
+                >The Undertow of Sadness</a
               >
             </h2>
-            <h5>02/04/2021</h5>
+            <h5>05/10/2019</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a
-                href="/essays/disappearing.html"
-                target="_blank"
-                class="read-more-link"
+              <a href="/essays/undertow-sadness.html" class="read-more-link"
                 >[Read more]</a
               >
             </p>
