responsivness further optimized

--- a/essays/essays.html
+++ b/essays/essays.html
@@ -69,8 +69,8 @@
     <h1 class="mt-5">Essays</h1>
     <section class="content-area">
       <div class="container">
-        <div class="row essay-entry">
-          <div class="col-md-6">
+        <div class="row essay-entry-row">
+          <div class="col-md-6 essay-entry">
             <h2><a href="/essays/disappearing.html">Disappearing</a></h2>
             <h5>02/04/2021</h5>
             <p>
@@ -81,7 +81,7 @@
               >
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 essay-entry">
             <h2><a href="/essays/becoming.html">Becoming</a></h2>
             <h5>02/04/2021</h5>
             <p>
@@ -93,8 +93,8 @@
             </p>
           </div>
         </div>
-        <div class="row essay-entry">
-          <div class="col-md-6">
+        <div class="row essay-entry-row">
+          <div class="col-md-6 essay-entry">
             <a href="/essays/disappearing.html"></a>
             <h2>Dr. Ortega's Daughter</h2>
             <h5>02/04/2021</h5>
@@ -106,7 +106,7 @@
               >
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 essay-entry">
             <a href="/essays/becoming.html"></a>
             <h2>Some water in between</h2>
             <h5>02/04/2021</h5>
@@ -119,8 +119,8 @@
             </p>
           </div>
         </div>
-        <div class="row essay-entry">
-          <div class="col-md-6">
+        <div class="row essay-entry-row">
+          <div class="col-md-6 essay-entry">
             <h2>
               <a href="/essays/undertow-sadness.html"
                 >The Undertow of Sadness</a
@@ -135,7 +135,7 @@
               >
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 essay-entry">
             <a href="/essays/becoming.html" target="_blank"></a>
             <h2>Bla bla bla bla bla</h2>
             <h5>02/04/2021</h5>
