--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Walk My Shoes</title>
@@ -10,22 +11,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="/index.html" ><img src="/images/logo_square.jpg" class="logo-navbar"/></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="/index.html"><img src="/images/logo_square.jpg" class="logo-navbar" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -54,37 +52,41 @@
     </nav>
     <div class="container">
         <header class="mt-5">
-            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title img-fluid"/>
+            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title img-fluid" />
         </header>
-        <section class="intro">
-            <div class="row">
-                <div class="col-lg-6">
-                    <img src="/images/logo_me_walk.jpg" alt="logo walking" class="logo-walking img-fluid"/>
+       <section class="intro">
+           <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img src="./images/logo_me_walk.jpg" class="logo-walking img-fluid" />
+                    </div>
+                    <div class="col-lg-6 intro-text">
+                        <h2>
+                            <strong>
+                                These are my shoes for you to borrow. Try them on, feel my
+                                feelings, think my thoughts, say my words.
+                                <br />
+                                <h1 class="walk-my-shoes-title">Walk my shoes.</h1>
+                            </strong>
+                        </h2>
+                    </div>
                 </div>
-                <div class="col-lg-6 intro-text">
-                    <h2>
-                        <strong>
-                            These are my shoes for you to borrow. Try them on, feel my
-                            feelings, think my thoughts, say my words.
-                            <br />
-                            <h1 class="walk-my-shoes-title">Walk my shoes.</h1>
-                        </strong>
-                    </h2>
-                </div>
-            </div>
-        </section>
+           </div>
+       </section>
         <section class="contact" id="contact">
             <h2><strong>Contact</strong></h2>
-            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links"><i
+                    class="fab fa-instagram fa-2x"></i></a>
             <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
-                        class="text-rigt contact-links">@walkmyshoes.words</a>
-                        <br/>
+                class="text-rigt contact-links">@walkmyshoes.words</a>
+            <br />
 
             <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
-            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>          
+            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>
         </section>
-    <footer>
-        <p>Coded and designed by: Irene Ortega</p>
-    </footer>    
-  </body>
+        <footer>
+            <p>Coded and designed by: Irene Ortega</p>
+        </footer>
+</body>
+
 </html>
