added image to about section

--- a/about.html
+++ b/about.html
@@ -67,6 +67,7 @@
     </nav>
     <h1 class="mt-5">About Walk My Shoes</h1>
     <section class="content-area">
+      <img src="/images/profile_pic_row.jpg" class="img-fluid profile-picture d-none d-sm-block"/>
       <p>
         <em
           >“It’s awful and terrible and it sucks. It hurts so bad. It’s like
