changed titles font. added some-water.html. adjusted some margines and deleted some fake content

--- a/essays/essays.html
+++ b/essays/essays.html
@@ -14,6 +14,11 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -66,7 +71,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="mt-5">Essays</h1>
+    <h1 class="mt-3">essays</h1>
     <section class="content-area">
       <div class="container">
         <div class="row essay-entry-row">
@@ -82,74 +87,17 @@
             </p>
           </div>
           <div class="col-md-6 essay-entry">
-            <h2><a href="/essays/becoming.html">Becoming</a></h2>
+            <h2><a href="/essays/some-water.html">Some water in between</a></h2>
             <h5>02/04/2021</h5>
             <p>
               I quieted my voice until I had none. I muted myself. But quiet is
               invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" class="read-more-link"
+              <a href="/essays/some-water.html" class="read-more-link"
                 >[Read more]</a
               >
             </p>
           </div>
         </div>
-        <div class="row essay-entry-row">
-          <div class="col-md-6 essay-entry">
-            <a href="/essays/disappearing.html"></a>
-            <h2>Dr. Ortega's Daughter</h2>
-            <h5>02/04/2021</h5>
-            <p>
-              I quieted my voice until I had none. I muted myself. But quiet is
-              invisible, and that's how I disappeared.
-              <a href="/essays/disappearing.html" class="read-more-link"
-                >[Read more]</a
-              >
-            </p>
-          </div>
-          <div class="col-md-6 essay-entry">
-            <a href="/essays/becoming.html"></a>
-            <h2>Some water in between</h2>
-            <h5>02/04/2021</h5>
-            <p>
-              I quieted my voice until I had none. I muted myself. But quiet is
-              invisible, and that's how I disappeared.
-              <a href="/essays/becoming.html" class="read-more-link"
-                >[Read more]</a
-              >
-            </p>
-          </div>
-        </div>
-        <div class="row essay-entry-row">
-          <div class="col-md-6 essay-entry">
-            <h2>
-              <a href="/essays/undertow-sadness.html"
-                >The Undertow of Sadness</a
-              >
-            </h2>
-            <h5>05/10/2019</h5>
-            <p>
-              I quieted my voice until I had none. I muted myself. But quiet is
-              invisible, and that's how I disappeared.
-              <a href="/essays/undertow-sadness.html" class="read-more-link"
-                >[Read more]</a
-              >
-            </p>
-          </div>
-          <div class="col-md-6 essay-entry">
-            <a href="/essays/becoming.html" target="_blank"></a>
-            <h2>Bla bla bla bla bla</h2>
-            <h5>02/04/2021</h5>
-            <p>
-              I quieted my voice until I had none. I muted myself. But quiet is
-              invisible, and that's how I disappeared.
-              <a
-                href="/essays/becoming.html"
-                target="_blank"
-                class="read-more-link"
-                >[Read more]</a
-              >
-            </p>
-          </div>
         </div>
       </div>
       <div class="other-pages">
@@ -163,13 +111,13 @@
             <li class="page-item active">
               <a class="page-link" href="/blog/blog.html">1</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
             <li class="page-item">
               <a class="page-link" href="#" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
               </a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </div>
