--- a/about.html
+++ b/about.html
@@ -14,6 +14,11 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -65,42 +70,18 @@
         </div>
       </div>
     </nav>
-    <h1 class="mt-5">About Walk My Shoes</h1>
+    <h1 class="mt-3">about walk my shoes</h1>
     <section class="content-area">
-      <img src="/images/profile_pic_row.jpg" class="img-fluid profile-picture d-none d-sm-block"/>
+      <img
+        src="/images/profile_pic_row.jpg"
+        class="img-fluid profile-picture d-none d-sm-block"
+      />
       <p>
-        <em
-          >“It’s awful and terrible and it sucks. It hurts so bad. It’s like
-          you’ve been purposefully frozen forever and now you’re slowly
-          defrosting, and everything, everything hurts. (...) It’s like having
-          an exposed nerve.”</em
-        >
-        <br />
-        <br />
-        These were Glennon Doyle’s words talking about her early sobriety, and I
-        thought “this is exactly how I’ve been feeling”. Except I barely drink,
-        I don’t do drugs, or gamble. My addiction, my escape, what kept me numb,
-        I realised, was a chronic case of people pleasing. The strong believe
-        that I needed to be liked and fit in. Be accommodating. That everyone
-        else mattered but me. In the same interview, she continues saying that she hasn’t been “fine”
-        since she stopped drinking, because she was finally living. Being alive
-        means feeling, the good and the bad. For me, it was as if I had been
-        just floating through life for years but never really living. How do you
-        go on for so long without actually living? And so you never become
-        anyone. You just exist and make decisions based on existing, to keep
-        existing. And it’s not happy, it’s not fulfilling, but you don’t know,
-        because that is your reality. It has always been. And when you finally
-        wake up and see and feel for the first time, it’s so overwhelming, and
-        you don’t know what to do with all that. You need to process and
-        uncover, discover and for the first time choose. Choose for the person
-        you are meant to be. 
-        <br />
-        <strong>This is where this space was born.</strong>
-        <hr/>
         What you'll find here are all my own words, thoughts and feelings. It's
-        raw, personal, vulnerable and absolutely terrifying to share, but I have chosen to do it. To unburden myself of years of carrying the weight of my
-        emotions, but also with the hope that some of it will resonate
-        with others and encourage deeper connections. Because if I have learned
+        raw, personal, vulnerable and absolutely terrifying to share, but I have
+        chosen to do it. To unburden myself of years of carrying the weight of
+        my emotions, but also with the hope that some of it will resonate with
+        others and encourage deeper connections. Because if I have learned
         something in the past years of my own search is that some emotions,
         situations, responses are universal; That we all have our own world of
         trauma and drama and pain and joy and we are all looking for a way to
