--- a/essays/undertow-sadness.html
+++ b/essays/undertow-sadness.html
@@ -14,6 +14,11 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -66,7 +71,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="mt-5"><a href="/essays/essays.html">Essays</a></h1>
+    <h1 class="mt-3"><a href="/essays/essays.html">essays</a></h1>
     <section class="content-area">
       <h2>The Undertow of Sadness</h2>
       <h5>05/10/2019</h5>
