--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
@@ -51,8 +53,8 @@
         </div>
     </nav>
     <div class="container">
-        <header class="mt-5">
-            <img src="/images/logo_long.jpg" alt="logo walk my shoes" class="logo-title img-fluid" />
+        <header class="d-flex">
+            <h1 class="page-title mt-5 pb-3">walk my shoes</h1>
         </header>
        <section class="intro">
            <div class="container">
@@ -66,7 +68,7 @@
                                 These are my shoes for you to borrow. Try them on, feel my
                                 feelings, think my thoughts, say my words.
                                 <br />
-                                <h1 class="walk-my-shoes-title">Walk my shoes.</h1>
+                                <span id="walk-my-shoes">Walk my shoes.</span> 
                             </strong>
                         </h2>
                     </div>
