--- a/poems/poems.html
+++ b/poems/poems.html
@@ -14,6 +14,11 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -65,7 +70,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="mt-5">Poems</h1>
+    <h1 class="mt-3">poems</h1>
     <section class="content-area">
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
       <div class="elfsight-app-032824d9-fceb-4aa1-895f-22c5e2e6f524"></div>
