--- a/essays/essays.html
+++ b/essays/essays.html
@@ -90,8 +90,10 @@
             <h2><a href="/essays/some-water.html">Some water in between</a></h2>
             <h5>02/04/2021</h5>
             <p>
-              I quieted my voice until I had none. I muted myself. But quiet is
-              invisible, and that's how I disappeared.
+              Almost three years later, I’m sitting in the place where I first saw
+              him. A cozy but crowded café, immersed in the noise of the espresso
+              machines working non-stop, helping to quiet my thoughts, like it did
+              back then.
               <a href="/essays/some-water.html" class="read-more-link"
                 >[Read more]</a
               >
