added "about" text

--- a/about.html
+++ b/about.html
@@ -77,26 +77,34 @@
         class="img-fluid profile-picture d-none d-sm-block"
       />
       <p>
-        What you'll find here are all my own words, thoughts and feelings. It's
-        raw, personal, vulnerable and absolutely terrifying to share, but I have
-        chosen to do it. To unburden myself of years of carrying the weight of
-        my emotions, but also with the hope that some of it will resonate with
-        others and encourage deeper connections. Because if I have learned
-        something in the past years of my own search is that some emotions,
-        situations, responses are universal; That we all have our own world of
-        trauma and drama and pain and joy and we are all looking for a way to
-        make it work.
+        I created this space for honesty, vulnerability, empathy and compassion.
+        For free expression of things I have kept to myself for too long. But
+        above all, for understanding, discovery, healing and growth, in an
+        attempt to find my voice, recover things that I have lost on the way
+        through life and build some new ones.
         <br />
         <br />
-        Most of the essays are still draft versions (if I aimed for perfection I
-        would never share) and the blog posts are written on the spot or edited
-        versions of notes I keep on my phone.
+        What you'll find here are all my own words, thoughts, feelings and
+        reflections. It's raw, personal, and absolutely terrifying to share, but
+        I have chosen to do so. To unburden myself of years of carrying the
+        weight of my emotions, but also with the hope that some of it will
+        resonate with others and encourage deeper connections and conversations.
+        Because if I have learned something in the past years of my own search
+        is that some emotions, situations and responses are universal; that we
+        all have our own world of trauma and drama and pain and joy and success
+        and we are all looking for a way to make it through, to heal, to evolve
+        and to move forward.
         <br />
         <br />
-        I feel uncomfortable calling myself a writer, but I write, because I do
-        believe I have something to say and a message that can find common
-        ground in other people. I'm still finding my voice but I want you to be
-        part of it. The words and the process.
+        Things might seem a little scattered around here, because that's how my
+        thoughts are at the moment. I'm hoping that the more I write, the more
+        context I'll provide, and that the more you read, the more you will be
+        able to understand where I'm coming from. Most of the essays are still
+        draft versions -if I aimed for perfection I would never share- and the
+        blog posts are written on the spot or edited versions of my morning
+        pages and notes I keep on my phone. The poems are usually quick ideas
+        that come to my mind when I'm too tired to think about it but have a lot
+        to say.
       </p>
     </section>
     <footer>
