--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="What you'll find here are all my own words, thoughts, feelings and
+        reflections. "
+    />
     <title>About - Walk My Shoes</title>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -30,8 +35,12 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html"
-          ><img src="/images/logo_square.jpg" class="logo-navbar"
+        <a class="navbar-brand" href="/index.html" title="Home"
+          ><img
+            src="/images/logo_square.jpg"
+            alt="Walk my shoes small logo"
+            title="Walk my shoes logo"
+            class="logo-navbar"
         /></a>
         <button
           class="navbar-toggler"
@@ -47,24 +56,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html"
+              <a class="nav-link" href="/index.html" title="Home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/about.html" title="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/essays/essays.html">Essays</a>
+              <a class="nav-link" href="/essays/essays.html" title="Essays"
+                >Essays</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html">Poems</a>
+              <a class="nav-link" href="/poems/poems.html" title="Poems"
+                >Poems</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog/blog.html">Blog</a>
+              <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#contact">Contact</a>
+              <a class="nav-link" href="/index.html#contact" title="Contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -74,6 +89,8 @@
     <section class="content-area">
       <img
         src="/images/profile_pic_row.jpg"
+        alt="Author's pictures"
+        title="Author's picture"
         class="img-fluid profile-picture d-none d-sm-block"
       />
       <p>
