--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Walk my shoes is my space for sharing personal essays, poems and some random thoughts"/>
     <title>Home - Walk My Shoes</title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous">
+    </script>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    <link h
+    ref="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    <link rel="stylesheet" 
+    href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/styles.css" />
 </head>
@@ -23,7 +30,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/images/logo_square.jpg" class="logo-navbar" /></a>
+            <a class="navbar-brand" href="/index.html" title="Home"><img src="/images/logo_square.jpg" alt="Walk my shoes small logo" title="Walk my shoes logo" class="logo-navbar" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,22 +38,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/index.html" title="Home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/about.html" title="About">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/essays/essays.html">Essays</a>
+                        <a class="nav-link" href="/essays/essays.html" title="Essays">Essays</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/poems/poems.html">Poems</a>
+                        <a class="nav-link" href="/poems/poems.html" title="Poems">Poems</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog/blog.html">Blog</a>
+                        <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact</a>
+                        <a class="nav-link" href="index.html#contact" title="Contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +67,7 @@
            <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="./images/logo_me_walk.jpg" class="logo-walking img-fluid" />
+                        <img src="./images/logo_me_walk.jpg" alt="Image girl walking" title="logo walking" class="logo-walking img-fluid" />
                     </div>
                     <div class="col-lg-6 intro-text">
                         <h2>
@@ -77,14 +84,14 @@
        </section>
         <section class="contact" id="contact">
             <h2><strong>Contact</strong></h2>
-            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank" class="text-rigt contact-links"><i
+            <a href="https://www.instagram.com/walkmyshoes.words/" title="Link to Walk my shoes Instagram" target="_blank" class="text-rigt contact-links"><i
                     class="fab fa-instagram fa-2x"></i></a>
-            <a href="https://www.instagram.com/walkmyshoes.words/" target="_blank"
+            <a href="https://www.instagram.com/walkmyshoes.words/" title="Link to Walk my shoes Instagram" target="_blank"
                 class="text-rigt contact-links">@walkmyshoes.words</a>
             <br />
 
-            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
-            <a href="mailto:walkmyshoes.words@gmail.com" class="contact-links">walkmyshoes.words@gmail.com</a>
+            <a href="mailto:walkmyshoes.words@gmail.com" title="link to e-mail" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
+            <a href="mailto:walkmyshoes.words@gmail.com" title="link to e-mail" class="contact-links">walkmyshoes.words@gmail.com</a>
         </section>
         <footer>
             <p>Coded and designed by: Irene Ortega</p>
