--- a/essays/undertow-sadness.html
+++ b/essays/undertow-sadness.html
@@ -30,9 +30,13 @@
 
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"
-          ><img src="/images/logo_square.jpg" class="logo-navbar"
+      <div class="container">
+        <a class="navbar-brand" href="/index.html" title="Home"
+          ><img
+            src="/images/logo_square.jpg"
+            alt="Walk my shoes small logo"
+            title="Walk my shoes logo"
+            class="logo-navbar"
         /></a>
         <button
           class="navbar-toggler"
@@ -48,24 +52,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html"
+              <a class="nav-link" href="/index.html" title="Home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About">About</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/essays/essays.html" title="Essays"
+                >Essays</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/essays/essays.html">Essays</a>
+              <a class="nav-link" href="/poems/poems.html" title="Poems"
+                >Poems</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html">Poems</a>
+              <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog/blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/index.html#contact">Contact</a>
+              <a class="nav-link" href="/index.html#contact" title="Contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
